Hopefully fixed Travis's Complaints

--- a/html/changelogs/DoctorOctopusTheOctopi-PR-473.yml
+++ b/html/changelogs/DoctorOctopusTheOctopi-PR-473.yml
@@ -22,7 +22,7 @@
 #################################
 
 # Your name.  
-DoctorOctopus: Author
+author: DoctorOctopus
 
 # Optional: Remove this file after generating master changelog.  Useful for PR changelogs that won't get used again.
 delete-after: True
