Hopefully fixed the changelog Travis Error
If not, fuck it I'll ask for help tommorow when more people are on.

--- a/html/changelogs/DoctorOctopusTheOctopi-PR-473.yml
+++ b/html/changelogs/DoctorOctopusTheOctopi-PR-473.yml
@@ -38,7 +38,7 @@ changes:
   - maptweak: "Completed the Science biohazard lockdown system"
   - maptweak: "Made the MAC Cannon more secure."
   - maptweak: "Remodeled the Hospital Chemistry Lab"
-  - maptweak: "Added another Mongoose to City Hall"
+  - rscadd: "Added another Mongoose to City Hall"
   - maptweak: "Tiny remodel to the Slums Armory - Made it so you can put things in the display windows."
-  - maptweak: "Added some cleaning supplies in the hospital."  
+  - rscadd: "Added some cleaning supplies in the hospital."  
   - maptweak: "Added a button inside the Police Armory so people stop locking themselves in."
