--- a/html/changelogs/DoctorOctopusTheOctopi-PR-473.yml
+++ b/html/changelogs/DoctorOctopusTheOctopi-PR-473.yml
@@ -1,44 +1,14 @@
-################################
-# Example Changelog File
-#
-# Note: This file, and files beginning with ".", and files that don't end in ".yml" will not be read. If you change this file, you will look really dumb.
-#
-# Your changelog will be merged with a master changelog. (New stuff added only, and only on the date entry for the day it was merged.)
-# When it is, any changes listed below will disappear.
-#
-# Valid Prefixes: 
-#   bugfix
-#   wip (For works in progress)
-#   tweak
-#   soundadd
-#   sounddel
-#   rscadd (general adding of nice things)
-#   rscdel (general deleting of nice things)
-#   imageadd
-#   imagedel
-#   maptweak
-#   spellcheck (typo fixes)
-#   experiment
-#################################
-
-# Your name.  
 author: DoctorOctopus
-
-# Optional: Remove this file after generating master changelog.  Useful for PR changelogs that won't get used again.
 delete-after: True
-
-# Any changes you've made.  See valid prefix list above.
-# INDENT WITH TWO SPACES.  NOT TABS.  SPACES.
-# SCREW THIS UP AND IT WON'T WORK.
-# Also, all entries are changed into a single [] after a master changelog generation. Just remove the brackets when you add new entries.
-# Please surround your changes in  double quotes ("), as certain characters otherwise screws up compiling. The quotes will not show up in the changelog.
 changes: 
+  - maptweak: "Added firelocks to the USNC Frigate. Tell me if a firelock borked."
+  - maptweak: "Added air alarms to the USNC Frigate. Tell me if I missed a room."
   - maptweak: "Created a Casino in the slums for all your gambling needs."
   - maptweak: "Created a Crime Scene in the slums because its a scary place."
-  - maptweak: "Completed the Science biohazard lockdown system"
-  - maptweak: "Made the MAC Cannon more secure."
-  - maptweak: "Remodeled the Hospital Chemistry Lab"
-  - rscadd: "Added another Mongoose to City Hall"
+  - maptweak: "Completed the Science biohazard lockdown system."
+  - maptweak: "Made the MAC Cannon more secure, remodeled MAC Checkpoint."
+  - maptweak: "Remodeled the Hospital Chemistry Lab."
+  - rscadd: "Added another Mongoose to City Hall."
   - maptweak: "Tiny remodel to the Slums Armory - Made it so you can put things in the display windows."
   - rscadd: "Added some cleaning supplies in the hospital."  
   - maptweak: "Added a button inside the Police Armory so people stop locking themselves in."
