--- a/html/changelogs/afirpo - RustAccessBtn.yml
+++ b/html/changelogs/afirpo - RustAccessBtn.yml
@@ -33,4 +33,4 @@ delete-after: True
 # Also, all entries are changed into a single [] after a master changelog generation. Just remove the brackets when you add new entries.
 # Please surround your changes in  double quotes ("), as certain characters otherwise screws up compiling. The quotes will not show up in the changelog.
 changes: 
-  - rscadd: "Added an access button to icly cycle between Exterior and Interior fusion core chamber."
+  - maptweak: "Added an access button to icly cycle between Exterior and Interior fusion core chamber."
