Impedrezine BrainLoss increased
Increases Impedrezine brain loss from .2 to 5.25, dealing .05 damage per tick after brain regen.

--- a/html/changelogs/Kurgis-PR-Impedrezine-Changes.yml
+++ b/html/changelogs/Kurgis-PR-Impedrezine-Changes.yml
@@ -33,4 +33,4 @@ delete-after: True
 # Also, all entries are changed into a single [] after a master changelog generation. Just remove the brackets when you add new entries.
 # Please surround your changes in  double quotes ("), as certain characters otherwise screws up compiling. The quotes will not show up in the changelog.
 changes: 
-  - tweak: "Tripled the brain loss Impedrezine inflicts to allow it to kill a person."
+  - tweak: "Changed the brain loss Impedrezine inflicts to allow it to kill a person."
