--- a/html/changelogs/inniegunstuff.yml
+++ b/html/changelogs/inniegunstuff.yml
@@ -3,10 +3,5 @@ author: Desolane900
 delete-after: True
 
 changes:
-  - bugfix: "stopped admin atmos grief verb from deleting all the fuel everywhere"
-  - rscadd: "added the MA3 assault rifle"
-  - rscadd: "changed canister health to double of what it was"
-  - rscadd: "changed a few weapon and magazine descriptions"
-  - rscadd: "added 5.56mm and 9mm to ammo fabricators"
-  - rscadd: "returned the Battle Rifle to it's glory days"
-  - rscadd: "increased the fire rate of the LMG"
+  - rscadd: "added the modified Insurrectionist DMR"
+  - rscadd: "adjusted fire rate of the M392 DMR"
