--- a/html/changelogs/Ingredients-Theta Project Upgrades.yml
+++ b/html/changelogs/Ingredients-Theta Project Upgrades.yml
@@ -40,6 +40,7 @@ changes:
   - tweak: "Theta Undersuit was replaced and now will actually work."
   - tweak: "Slightly Changed Theta Project equipment names so they arn't so long."
   - tweak: "Decreased armor in Theta Arm Guards."
+  - tweak: "Decreased armor from Theta Boots to be more in line with the Arm Guards."
   - tweak: "Made armor thicker on Theta armor to facilitate longer usage time. And to offset no shields."
   - tweak: "5 armor thickness to boots and gloves."
   - tweak: "10 armor thickness on Theta Undersuit."
