--- a/html/changelogs/Ingredients-Theta Project Upgrades.yml
+++ b/html/changelogs/Ingredients-Theta Project Upgrades.yml
@@ -39,14 +39,10 @@ changes:
   - tweak: "The armor gives a slight boost to walk speed."
   - tweak: "Theta Undersuit was replaced and now will actually work."
   - tweak: "Slightly Changed Theta Project equipment names so they arn't so long."
-  - tweak: "Decreased armor in Theta Arm Guards."
-  - tweak: "Decreased armor from Theta Boots to be more in line with the Arm Guards."
+  - tweak: "Decreased armor in Theta Arm Guards. Decreased armor from Theta Boots to be more in line with the Arm Guards."
   - tweak: "Made armor thicker on Theta armor to facilitate longer usage time. And to offset no shields."
-  - tweak: "5 armor thickness to boots and gloves."
-  - tweak: "10 armor thickness on Theta Undersuit."
-  - tweak: "Minimum breath pressure halved for augmented lungs."
-  - tweak: "Slightly increased lung max damage because it was formally at the native damage levels"
+  - tweak: "Added slight armor thickness to Gloves, Boots and undersuit
+  - tweak: "Minimum breath pressure halved for augmented lungs. Slightly increased lung max damage because it was formally at the native damage levels"
   - tweak: "Added descriptions to all the augmented organs."
-  - experiment: "Theta Armor lowered slightly and chest is given a roughly 30% chance to reflect ballistics from the chest for no damage."
-  - experiment: "Theta Helmet was given a roughly 20% chance to deflect bullets for no damage."
+  - experiment: "Theta Armor and Theta Helmet given a chance to deflect bullets for no damage."
   - experiment: "Added in the All Purpose Carbine for use with the Theta Project."
