--- a/html/changelogs/Flaksim Update 8 june.yml
+++ b/html/changelogs/Flaksim Update 8 june.yml
@@ -34,7 +34,7 @@ delete-after: True
 # Please surround your changes in  double quotes ("), as certain characters otherwise screws up compiling. The quotes will not show up in the changelog.
 changes: 
   - maptweak: "Added an elevator between deck 2 and MAC controls on the frigate."
-  - maptweak: "Added a "supraluminal communications array" (fax) to the Kig-Yar bridge."
+  - maptweak: "Added a \"supraluminal communications array\" (fax) to the Kig-Yar bridge."
   - bugfix: "Fixed deck gun and archer gun controls on the frigate."
   - bugfix: "Fixed Kig-Yar vessel engines and connector port for refueling."
-  - experiment: "Changed Sangheili language colour to "vox" entry."
+  - experiment: "Changed Sangheili language colour to \"vox\" entry."
