Changelod updated to reflect changes

--- a/html/changelogs/Ingredients URF Updates 23 June.yml
+++ b/html/changelogs/Ingredients URF Updates 23 June.yml
@@ -33,17 +33,12 @@ delete-after: True
 # Also, all entries are changed into a single [] after a master changelog generation. Just remove the brackets when you add new entries.
 # Please surround your changes in  double quotes ("), as certain characters otherwise screws up compiling. The quotes will not show up in the changelog.
 changes: 
-  - tweak: "Changed Theta project names to Project Orion for guns and armor."
-  - tweak: "Armor thickness is now only on helmet and armor pieces. Undersuit no longer provides armor values. All armor values were decreased so that max is 65 for two values on main armor piece."
-  - tweak: "Added in Orion Project Race called Orion which Admins will have to manually set once proper RP is done ICly to create project Orion. Added in armor race restrictions so it can only be worn once race is set by an admin."
-  - tweak: "Removed Code to deflect bullets from armor and helmet as it wasn't working."
-  - tweak: "Added a modded Icon, MA9 gun into Weapon sprites.dm, changed the Orion Project Icon gun to use the MA9. Changed weight class from huge to large."
-  - tweak: "Added in code for all Theta Armor to species restrict armor."
-  - tweak: "Changed Theta Project .DM file name to Orion Project. Changed Project Theta evelope to reflect Project Orion's needs."
-  - tweak: "Added in Chemistry station to Exo3"
-  - tweak: "Swapped around surgery kits and IV drips. Added in sinks to surgery."
-  - tweak: "Deleted prototype SMGs from shooting range in Exo3 as they are actually terrible. Added in three ammobags for Orion project. Added in a few extra misc items to spice up the room."
-  - tweak: "Removed random project theta Labratory hidden in rocks of Exo-research 2."
-  - tweak: "Removed old project theta lab in Gem City RnD"
-  - tweak: "Replaced Orion equipment tables with Three seperate closets each holding gear needed for one subject."
-  - tweak: "Added three Orion Code envelopes to frigate bridge and CO quarters."
+  - tweak: "Added in random clothes sets in Innibase3 Laundry room and Eastern Storage."
+  - tweak: "Added in five voice analysers into Engineering storage in Inniebase3 so innies can get creative with bombs."
+  - tweak: "Added in a small assortment of old guns with a bit of ammo into the ammo crates Inniebase3 north storage. Added in a few sets of armor vests."
+  - tweak: "Added in two random medkit spawners and four random eyewear spawners. to Inniebase3 north storage."
+  - tweak: "Added in randomised misc items to Eastern and Northern Storage in Inniebase2. Should help with blending in with civies if they want to go incognito. Added in a emergency rations freezer as well."
+  - tweak: "Added in a few old style guns to the weapons crates in Northern Storage Inniebase2."
+  - tweak: "Added in some merc armor and helmets into northern Storage Inniebase2."
+  - tweak: "Added in a secure briefcase with money inside of it in the hidden office in eastern maint in Inniebase2. Also added in a case of cigars."
+  - tweak: "Added barricades over the grills on Inniebase1 to make it more difficult to enter through vents."
