--- a/html/changelogs/Ingredients Orion Project 20 June.yml
+++ b/html/changelogs/Ingredients Orion Project 20 June.yml
@@ -36,7 +36,6 @@ changes:
   - tweak: "Changed Theta project names to Project Orion for guns and armor.Removed Code to deflect bullets from armor and helmet as it wasn't working. Added in code for all Theta Armor to species restrict armor."
   - tweak: "Armor thickness is now only on helmet and armor pieces. Undersuit no longer provides armor values."
   - tweak: "Added in Orion Project Race called Orion which Admins will have to manually set once proper RP is done ICly to create project Orion. Added in armor race restrictions so it can only be worn once race is set by an admin."
-  - tweak: "Added a modded Icon, MA9 gun into Weapon sprites.dm, changed the Orion Project Icon gun to use the MA9. Changed weight class from huge to large."
-  - tweak: "Changed Theta Project .DM file name to Orion Project. Changed Project Theta evelope to reflect Project Orion's needs."
-  - tweak: "Added in Chemistry station to Exo3."
-  - tweak: "Removed random project theta Labratory hidden in rocks of Exo-research 2. Removed old project theta lab in Gem City RnD"
+  - imageadd: "Added a modded Icon, MA9 gun into Weapon sprites.dm, changed the Orion Project Icon gun to use the MA9. Changed weight class from huge to large."
+  - mapweak: "Added in Chemistry station to Exo3."
+  - maptweak: "Removed random project theta Labratory hidden in rocks of Exo-research 2. Removed old project theta lab in Gem City RnD"
