Changelog error fix

--- a/html/changelogs/Ingredients Minor Updates 29 June.yml
+++ b/html/changelogs/Ingredients Minor Updates 29 June.yml
@@ -36,6 +36,6 @@ changes:
   - tweak: "Added in Chem and Tracking Implant and Implanter into freezer. Added in pinpointers to use with tracker Implant."
   - tweak: "Updated Project Orion Envelope with details for new map. Added in Orion Code envelope to the corvette as well just in case it is used in game."
   - tweak: "Updated Orion Armor Descriptions as they mentioned the Theta Project in them."
-  - tweak: "Added in an Autopsy scanner to the Morgue of Exo3.""
+  - tweak: "Added in an Autopsy scanner to the Morgue of Exo3."
   - tweak: "Removed Deconstructer and Circuit printer from Exo3. No point in having duplicates. Replaced with Some extra ammo boxes and more tables. Added in monkey cubes for live fire test subjects."
   - tweak: "Added in some vials for use with the Isolation machine."
