Move speed Applied when given race

--- a/html/changelogs/Ingredients Orion Updates 30 June.yml
+++ b/html/changelogs/Ingredients Orion Updates 30 June.yml
@@ -37,5 +37,5 @@ changes:
   - tweak: "Slightly improved Orion unarmed damage and block factor"
   - tweak: "Orion race buffs give 20 additional hp, slight pain tolerance, and temperature tolerance."
   - tweak: "Replaced dufflebags with normal ODST backpacks for the time being as the previous ones were not usable."
-  - tweak: " "Added in a few medical storage belts in chem storage in exoresearch3."
+  - tweak: "Added in a few medical storage belts in chem storage in exoresearch3."
   - tweak: "Replaced pinpointers with GPS for tracking implants."
