Changelod update/ Money for Oni Base

--- a/html/changelogs/Ingredients Orion Updates 30 June.yml
+++ b/html/changelogs/Ingredients Orion Updates 30 June.yml
@@ -39,3 +39,4 @@ changes:
   - tweak: "Replaced dufflebags with normal ODST backpacks for the time being as the previous ones were not usable."
   - tweak: "Added in a few medical storage belts in chem storage in exoresearch3."
   - tweak: "Replaced pinpointers with GPS for tracking implants."
+  - tweak: "Added in three cash briefcases for Oni to use to procure additional materials for labs."
