--- a/html/changelogs/Ingredients URF Ship Items and New Innie Armors 30 June.yml
+++ b/html/changelogs/Ingredients URF Ship Items and New Innie Armors 30 June.yml
@@ -36,3 +36,4 @@ changes:
   - tweak: "Added in random clothes sets on Innie ship. Some random materials as well."
   - tweak: "Random weapon and ammo spawns were added in as well to the innie ship."
   - tweak: "A few static goodies were spread around the ship as well."
+  - tweak: "Added in two new types of armors, the Colossus Armor and the Zeal Scout Suit. Made a case which can carry the colossus armor."
