--- a/html/changelogs/Ingredients Colossus and Zeal fix 12 July.yml
+++ b/html/changelogs/Ingredients Colossus and Zeal fix 12 July.yml
@@ -34,4 +34,4 @@ delete-after: True
 # Please surround your changes in  double quotes ("), as certain characters otherwise screws up compiling. The quotes will not show up in the changelog.
 changes: 
   - tweak: "Changed Colossus and Zeal armor Stats to prevent speed boost while not wearing armor."
-  - tweak: "Fixed a few typos I saw in descriptions. Changed Zeal armor name to Shade."
+  - tweak: "Fixed a few typos I saw in descriptions."
