--- a/html/changelogs/Ingredients Colossus and Zeal fix 12 July.yml
+++ b/html/changelogs/Ingredients Colossus and Zeal fix 12 July.yml
@@ -33,5 +33,5 @@ delete-after: True
 # Also, all entries are changed into a single [] after a master changelog generation. Just remove the brackets when you add new entries.
 # Please surround your changes in  double quotes ("), as certain characters otherwise screws up compiling. The quotes will not show up in the changelog.
 changes: 
-  - tweak: "Changed Colossus and Zeal armor Stats to prevent speed boost while not wearing armor."
+  - tweak: "Changed Colossus and Zeal armor Stats to prevent speed boost while not wearing armor. Gave Zeal armor half normal armor thickness so it can it will be more useful when under bullet fire."
   - tweak: "Fixed a few typos I saw in descriptions."
