Adds exit button to hangar.
Removes hangar access from Master at Arms, Brig Officer, and Detective.

Changelog updates.

--- a/html/changelogs/zaredman-instead-of-a-doorbell.yml
+++ b/html/changelogs/zaredman-instead-of-a-doorbell.yml
@@ -3,4 +3,5 @@ author: za_redman
 delete-after: True
 
 changes: 
-  - rscadd: "Gives Security access to the Hangar."
+  - rscadd: "Gives Chef of Security access to the Hangar."
+  - rscadd: "Adds exit button to hangar door."
