--- a/html/changelogs/changelog flaksim 18 august.yml
+++ b/html/changelogs/changelog flaksim 18 august.yml
@@ -37,3 +37,11 @@ changes:
   - maptweak: "Added Escape Pods to every human vessel."
   - tweak: "Edited Weapons Smuggler tradelists."
   - tweak: "Added a new Corgi, Emelie for Emsville."
+  - maptweak: "Adds 4 yan'me NPC's for defensive purposes."
+  - maptweak: "Adds 2 Huragok, currently for decoration, eventually these will be automated fixers."
+  - maptweak: "Added multitile Airlocks to the ship."
+  - maptweak: "Improved engine protection."
+  - maptweak: "Removed vulnerable phoron crates."
+  - maptweak: "Added Unngoy sleeping nests."
+  - maptweak: "Added Food Nipple."
+  - maptweak: "Adds a crate containing covenant energy barricades (packed up for transport prior to deployment)."
