--- a/html/changelogs/changelog flaksim 27 august.yml
+++ b/html/changelogs/changelog flaksim 27 august.yml
@@ -33,4 +33,5 @@ delete-after: True
 # Also, all entries are changed into a single [] after a master changelog generation. Just remove the brackets when you add new entries.
 # Please surround your changes in  double quotes ("), as certain characters otherwise screws up compiling. The quotes will not show up in the changelog.
 changes: 
-  - rscadd: "Adds a hostage training scenario for ODST's ."
+  - rscadd: "Adds a hostage training scenario for ODST's."
+  - rscadd: "Adds a brand new marine vessel, the UNSC Bertels."
